Documentation: Update upgrade guide from other minor versions regarding cache and CSS directories

--- a/documentation/installation_guide.html
+++ b/documentation/installation_guide.html
@@ -395,7 +395,7 @@ some manual work, but the upgrade procedure will not touch sublanguages directly
 
 <br />
 
-<span class="text-muted">* Styles and images are located in the main/css or main/img
+<span class="text-muted">* Styles and images are located in the main/img/ or app/Resources/public/css/themes/
 directories. You can still recover them from your backup if you have made it.
  Any modified style or image that uses the default style/image name will be
  overwritten by the next step. To avoid loosing your customisations, always
