--- a/documentation/installation_guide_es_ES.html
+++ b/documentation/installation_guide_es_ES.html
@@ -525,7 +525,7 @@ Este script se proporciona sin garantía. Por favor * siempre * realice una copi
   </li>
 </ul>
 <span class="text-muted">
-  * Los estilos e imágenes están ubicados en el directorio main/css o main/img. Usted puede recuperarlos desde la
+  * Los estilos e imágenes están ubicados en el directorio main/img o app/Resources/public/css/themes. Usted puede recuperarlos desde la
   copia de seguridad en el caso de que usted hya tenido la precaución de realizarla. Cualquier estilo o imagen
   modificada que use el nombre predeterminado style/image será sobrescrita en el siguiente paso. Para evitar
   perder cualquier personalización, siempre asegúrese de copiar styles/images bajo un nuevo nombre y use y
