--- a/documentation/installation_guide_fr_FR.html
+++ b/documentation/installation_guide_fr_FR.html
@@ -411,20 +411,20 @@
             quelconque version 1.11.*, les seuls pas à suivre sont:
             <ul>
                 <li>
-                    vérifier que vous n'avez pas créé une version modifiée d'une feuille de
+                    Vérifiez que vous n'avez pas créé une version modifiée d'une feuille de
                     style en utilisant un répertoire css existant <span class="text-muted">(si c'est le cas, elle sera
                         écrasée par la mise à jour. Gardez-en une copie que vous renommerez au
-                        moment de la replacer dans le répertoire main/css/)</span>
+                        moment de la replacer dans le répertoire app/Resources/public/css/themes/)</span>
                 </li>
-                <li> téléchargez le paquet d'installation de Chamilo 1.11 depuis la
+                <li> Téléchargez le paquet d'installation de Chamilo 1.11 depuis la
                     <a href="https://chamilo.org/download">page de téléchargement de Chamilo</a></li>
-                <li> dézippez les nouveaux fichiers de Chamilo 1.11 par dessus les fichiers de
+                <li> Dézippez les nouveaux fichiers de Chamilo 1.11 par dessus les fichiers de
                     l'ancienne version (ou dézippez les fichiers dans un répertoire et copiez-les ensuite
-                    là où se trouve votre version actuelle de Chamilo)</li>
-                <li> éditez le fichier app/config/configuration.php : localisez le numéro de version antérieur dans le paramètre <i>$_configuration['system_version']</i> (p.ex. '1.11.18') et remplacez-le
-                    par le numéro de la nouvelle version (p.ex. '1.11.26')</li>
-                <li> videz votre dossier archive/ : faites une copie temporaire de index.html, supprimez touss les contenus *dans* ce dossier (ne supprimer pas le dossier, juste ses contenus). Vous pouvez également vider ce dossier depuis le lien "Vidange du répertoire archive" du bloc "Système" de l'interface d'administration.</li>
-                <li> c'est fini! Il n'y a pas d'autre étape requise.</li>
+                    là où se trouve votre version actuelle de Chamilo, le zip contenant un sous-répertoire qui ne porte peut-être pas le même nom que votre installation)</li>
+                <li> Éditez le fichier app/config/configuration.php : localisez le numéro de version antérieur dans le paramètre <i>$_configuration['system_version']</i> (p.ex. '1.11.18') et remplacez-le
+                    par le numéro de la nouvelle version (p.ex. '1.11.28')</li>
+                <li> Videz votre dossier app/cache/twig/ : supprimez tous les contenus *dans* ce dossier (ne supprimez pas le dossier, juste ses contenus). Vous pouvez également vider ce dossier depuis le lien "Vidange du cache et des fichiers temporaires" du bloc "Système" de l'interface d'administration.</li>
+                <li> C'est fini! Il n'y a pas d'autre étape requise.</li>
             </ul>
 
             <br />
@@ -436,15 +436,15 @@
                 <li> télécharger le paquet Chamilo 1.11 depuis la <a href="https://chamilo.org/download">page de téléchargement de Chamilo</a></li>
                 <li> décompressez les nouveaux fichiers de Chamilo 1.11 sur les fichiers de votre ancienne installation (ou décompressez les dans un nouveau dossier et copier les fichiers extraits sur les anciens fichiers).</li>
                 <li> vérifiez que le fichier .htaccess de la version 1.11 a bien été copié</li>
-                <li> vérifiez que "AllowOverride All" est présent dans votre configuration Apache, car l'interprétation du fichier .htaccess est capitale pour le fonctionnement de Chamilo</li>
+                <li> vérifiez que "AllowOverride All" ou "Require all granted" (selon la version d'Apache) est présent dans votre configuration Apache, car l'interprétation du fichier .htaccess est capitale pour le fonctionnement de Chamilo</li>
                 <li> accéder à l'adresse de votre portail URL + main/install </li>
                 <li> Choisissez votre langue et cliquez sur <span style="font-style: italic;">Mettre à jour depuis la version 1.8.x / 1.9.x</span></li>
-                <li> Videz votre dossier archive/ : faites une copie temporaire de index.html, supprimez touss les contenus *dans* ce dossier (ne supprimer pas le dossier, juste ses contenus). Vous pouvez également vider ce dossier depuis le lien "Vidange du répertoire archive" du bloc "Système" de l'interface d'administration.</li>
+                <li> Videz votre dossier app/cache/ : faites une copie temporaire de index.html, supprimez touss les contenus *dans* ce dossier (ne supprimer pas le dossier, juste ses contenus). Vous pouvez également vider ce dossier depuis le lien "Vidange du répertoire archive" du bloc "Système" de l'interface d'administration.</li>
             </ul>
 
             <br />
 
-            <span class="text-muted">* Les styles et images se trouvent dans les répertoires main/css ou main/img.
+            <span class="text-muted">* Les styles et images se trouvent dans les répertoires main/img et app/Resources/public/css/themes/.
                 Vous pouvez les récupérer depuis la copie de sauvegarde (que vous n'avez pas manqué de prendre).
                 Toute image ou style modifié qui utilise le nom de l'image/style par défaut sera
                 écrasé lors de l'étape suivante. Pour éviter la perte de customisations, assurez-vous toujours
