Documentation: Add changelog entry for 1.11.30 with note on the .htaccess rule change.

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -110,6 +110,50 @@
 
     </table>
 
+    <div class="version" aria-label="1.11.30">
+        <a id="1.11.30"></a>
+        <h1>Chamilo 1.11.30 - ?, /02/2025</h1>
+        <h3>Release notes - summary</h3>
+        <p>Chamilo 1.11.30 is a patch release on top of 1.11.28.</p>
+        <h3>Release name</h3>
+        <p><a href="https://en.wikipedia.org/wiki/">?</a> is ...</p>
+        <h3>Security fixes</h3>
+        <ul aria-live="off">
+        </ul>
+        <h3>Important note</h3>
+        <p>Chamilo 1.11.30 comes with subtle changes in the root .htaccess file which could affect your system (for example by triggering "Not Found" errors on course homepages) if you use Apache &lt; 2.4.38-3. Please check line 37 of /.htaccess for more info.</p>
+        <h3>Notable new Features</h3>
+        <h4>For end-users, teachers and Chamilo admins</h4>
+        These features are immediately available to users through the web interface.<br />
+        <ul aria-live="off">
+        </ul>
+        <h4>For developers and sysadmins</h4>
+        Although most features here will be used by teachers or Chamilo admins, they require sysadmin privileges to enable them on the server.
+        <ul aria-live="off">
+        </ul>
+        <h3>Improvements (minor features) and debug</h3>
+        In reverse chronological order...
+        <ul aria-live="off">
+        </ul>
+        <h3>Stylesheets and theming</h3>
+        <ul aria-live="off">
+            <li>No notable style change</li>
+        </ul>
+        <h3>Web services</h3>
+        <ul aria-live="off">
+            <li>No notable change</li>
+        </ul>
+        <h3>Removals</h3>
+        <ul aria-live="off">
+            <li>No notable removal</li>
+        </ul>
+        <h3>Known issues</h3>
+        <ul aria-live="off">
+            <li>No notable known issue</li>
+        </ul>
+    </div>
+
+
     <div class="version" aria-label="1.11.28">
         <a id="1.11.28"></a>
         <h1>Chamilo 1.11.28 - Alcatraz, 21/10/2024</h1>
