--- a/documentation/optimization.html
+++ b/documentation/optimization.html
@@ -257,6 +257,7 @@ ALTER TABLE c_lp_item_view ADD INDEX idx_clpiv_c_i_v (c_id, id, view_count);
         ALTER TABLE c_chat_connected ADD INDEX idx_course_group(c_id, to_group_id);
         -- For big online exams, this index reduces the load considerably
         ALTER TABLE c_quiz_question ADD INDEX idx_cqq_cidid (c_id, id);
+        ALTER TABLE c_quiz_question ADD INDEX  idx_cqq_type (type);
         -- If you have many messages with attachments
         ALTER TABLE message_attachment ADD index idx_msgat_msgid (message_id);
         -- If you query audit logs from track_e_default on huge tables
