Documentation: Ongoing updates to install & changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -121,7 +121,7 @@
         <li>Shared surveys: The data related to this feature in v1.* was removed. We don't know of anyone using it, and Chamilo 2.0 comes with the structure to make a survey span several courses. Although this is not implemented in the interface yet, it will allow, in practice, to share surveys between courses. Tables shared_survey* have been removed.</li>
         <li>Userinfo: This feature allowed teachers to define kind of profile fields for users in the specific context of their courses. We believe this feature was non-accessible through the interface for at least 6 years. This has been removed in Chamilo 2.0 for maintainability. Tables c_userinfo_def and c_userinfo_content have been removed.</li>
         <li>Browser tracking: The track_e_open table has been removed. To our knowledge, it served at one point to support a kind of analytics tool inside Chamilo (aware of browser details), but hasn't been used for at least 10 years. This has been removed in Chamilo 2.0 for maintainability.</li>
-        <li></li>
+        <li>Upgrade: Homepages : custom homepages are not migrated from 1.11.x to 2.0. Save a copy of app/home/ locally before migrating and re-apply manually.</li>
     </ul>
 </div>
 <div class="syntax-description">
