Documentation: Indication of removal of whoisonline

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -641,6 +641,7 @@
         <li>[2025-01-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/6165deae1b197ac785637d469f39dc777d194390">6165deae</a>) Vendor: Remove optimize-css-assets-webpack-plugin</li>
         <li>[2025-01-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/1fa55bf3c3f9d831aec59bf347d4dc4e342cc895">1fa55bf3</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6045">GH#6045</a>) User: Remove user.registration_date</li>
         <li>[2024-12-21] (<a href="https://github.com/chamilo/chamilo-lms/commit/2f2a83ab8a89c787f9b1394d0261996b82e8ccb6">2f2a83ab</a> - <a href="https://task.beeznest.com/issues/22104">BT#22104</a>) Course: Remove obsolete 'Allow tests auto-launch' parameter and simplify logic</li>
+        <li>Whoisonline : the funcionality has been removed.</li>
 
     </ul>
 
