Documentation: Update changelog in preparation for alpha 2

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -92,6 +92,7 @@
     <h3>Changed</h3>
 
     <ul aria-live="off">
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/5299ad59daf4efa4f7cba01555d3aa09a66f1a9f">5299ad59</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6180">GH#6180</a>) Exercise: Remove ability to set one destination per answer in adaptative tests and added support for all non-open questions based on full success or failure results (Use c_quiz_rel_question.destination instead of c_quiz_answer.destination for success/failure)</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/2286dad037fc4d4e13dc4263e19131f65b5075ab">2286dad0</a> - <a href="https://task.beeznest.com/issues/22529">BT#22529</a>) Registration: the registration editable introduction block is now a "page" (Migration: Migrate C1 registration intro to CMS Page in C2)</li>
         <li>[2025-03-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/7902b32cf57adb7bc806951841e4f92f575786ac">7902b32c</a>) Internal: Rename plugin to XApi plugin</li>
         <li>[2025-03-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/14d6d0edd8a57d35d4512ca40e3ae87aebeb9093">14d6d0ed</a>) Internal: Rename plugin to Zoom plugin</li>
