Documentation: Update changelog in preparation for alpha 2

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -92,6 +92,7 @@
     <h3>Changed</h3>
 
     <ul aria-live="off">
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/26d37801b50ee30b4641448106dd413b288973a6">26d37801</a> - <a href="https://task.beeznest.com/issues/22527">BT#22527</a>) Webservice: Improve session creation to support all fields</li>
         <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/5299ad59daf4efa4f7cba01555d3aa09a66f1a9f">5299ad59</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6180">GH#6180</a>) Exercise: Remove ability to set one destination per answer in adaptative tests and added support for all non-open questions based on full success or failure results (Use c_quiz_rel_question.destination instead of c_quiz_answer.destination for success/failure)</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/2286dad037fc4d4e13dc4263e19131f65b5075ab">2286dad0</a> - <a href="https://task.beeznest.com/issues/22529">BT#22529</a>) Registration: the registration editable introduction block is now a "page" (Migration: Migrate C1 registration intro to CMS Page in C2)</li>
         <li>[2025-03-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/7902b32cf57adb7bc806951841e4f92f575786ac">7902b32c</a>) Internal: Rename plugin to XApi plugin</li>
@@ -143,6 +144,7 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/58ccde29f504acfef1b053864001dd55dac52bd3">58ccde29</a>) QA: Fix psalm errors and warnings</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/d735d3ad87e6e31902deb98c63df33109542d065">d735d3ad</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/1765">GH#1765</a>) Internal: Fix LP iframe showing login page when session expires</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/3014452ed4fa3bf8d65a3310c7d036702a9ab280">3014452e</a>) Internal: Fix definition of c_lp_rel_user.group_id (fixes assignment of users to learning paths)</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/d60e47438929f99e59aa3aa0f2e0c5ae0b3da666">d60e4743</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/3002">GH#3002</a>) Tracking: Fix broken query in users count</li>
