Documentation: Update changelog in preparation for alpha 2

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -144,6 +144,7 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/2a1d51e0a0eae12dc687f2757bdaadfeb32a4a1b">2a1d51e0</a> - <a href="https://task.beeznest.com/issues/22537">BT#22537</a>) Learnpath: Fix asset streaming error in LP viewer</li>
         <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/58ccde29f504acfef1b053864001dd55dac52bd3">58ccde29</a>) QA: Fix psalm errors and warnings</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/d735d3ad87e6e31902deb98c63df33109542d065">d735d3ad</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/1765">GH#1765</a>) Internal: Fix LP iframe showing login page when session expires</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/3014452ed4fa3bf8d65a3310c7d036702a9ab280">3014452e</a>) Internal: Fix definition of c_lp_rel_user.group_id (fixes assignment of users to learning paths)</li>
