Documentation: Update changelog in preparation for alpha 2 (report removal of PPT2LP/Oogie feature)

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -725,6 +725,7 @@
     <h3>Removed</h3>
 
     <ul aria-live="off">
+        <li>Oogie/PPT2LP converter of office documents to learning paths has been removed for lack of usage, complexity to setup and excessive maintenance effort</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/3e8aad932587b10bf594ff0a79fc9c72b6fcfe90">3e8aad93</a>) Internal: Remove WSRegistrationEvent event class</li>
         <li>[2025-03-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/7a861ce34e68f16930c040ac293b6721ee90617e">7a861ce3</a>) Internal: Remove deprecated ai_helper plugin after AI integration into core (configuration directly available from platform settings now)</li>
         <li>[2025-03-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/b5117cfbe094898dac15f6e486fdd6de2cc5642a">b5117cfb</a> - <a href="https://task.beeznest.com/issues/22518">BT#22518</a>) Admin: Session: remove link to user_move_stats until reimplementing the function</li>
