Documentation: Update changelog in preparation for alpha 2 (minor db fixes)

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -18,7 +18,7 @@
 <body>
 <div class="version" aria-label="2.0">
     <a id="2.0-alpha.2"></a>
-    <h1>Chamilo 2.0 alpha 2 - Petibonum, 2025-04-02</h1>
+    <h1>Chamilo 2.0 alpha 2 - Petibonum, 2025-04-03</h1>
     <h3>Release notes - summary</h3>
     <p>
         Chamilo 2.0 (stable) will be a major release, a new branch for the Chamilo software.
@@ -138,12 +138,16 @@
         <li>[2025-03-12] (<a href="https://github.com/chamilo/chamilo-lms/commit/33b7e60ff71cce40ddf80c4101d7e216c9cdd170">33b7e60f</a>) Internal: Hide Videoconference section if empty</li>
         <li>[2025-03-11] (<a href="https://github.com/chamilo/chamilo-lms/commit/e60e65f48926bd6bd27469438caa0d3f0cb27613">e60e65f4</a>) Language: Disable Short/Long variations of days and months names as new gettext msgid logic makes this more difficult. Will be implemented again later.</li>
         <li>[2025-01-13] (<a href="https://github.com/chamilo/chamilo-lms/commit/8004a7f87a6794477177b8f8efd49443e7edfc80">8004a7f8</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/3625">GH#3625</a>) Exercise: Add multi-delete with checkboxes in reporting page</li>
-
     </ul>
 
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/aa8a15ca03bfc7e7d12b95c653576a5db755b9a7">aa8a15ca</a>) Internal: Add setting titles and comments for multiple config categories</li>
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/ed29c9d755fc4026c1787d1306df97d5552fd5a4">ed29c9d7</a>) Internal: Refactor setting labels to use dynamic values</li>
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/f92de81a620530abc931ef726c870d6ff99bb5a2">f92de81a</a>) Test: Add locale field to profile update form in AccountControllerTest</li>
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/477f1e3a48178cd0024de36d48f6cec7ddab90d7">477f1e3a</a>) Internal: Fix translation placeholders for consistency in multiple language files</li>
+        <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/f5cbe95b55c33e23015e4291315833282c637484">f5cbe95b</a>) Internal: Fix default values for profile changeable_options and visible_options</li>
         <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/2a1d51e0a0eae12dc687f2757bdaadfeb32a4a1b">2a1d51e0</a> - <a href="https://task.beeznest.com/issues/22537">BT#22537</a>) Learnpath: Fix asset streaming error in LP viewer</li>
         <li>[2025-04-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/58ccde29f504acfef1b053864001dd55dac52bd3">58ccde29</a>) QA: Fix psalm errors and warnings</li>
         <li>[2025-04-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/d735d3ad87e6e31902deb98c63df33109542d065">d735d3ad</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/1765">GH#1765</a>) Internal: Fix LP iframe showing login page when session expires</li>
