Minor: Fix typo in security.html

--- a/public/documentation/security.html
+++ b/public/documentation/security.html
@@ -113,7 +113,7 @@ In Chamilo 2.0, we intend to send you security-related notifications through the
         will not immediately make your certificate useless.</p>
     <p>In Chamilo 2.0, we have added several parameters, together with recommendations,
     to the platform settings, Security section, that you are free to use or ignore,
-        depending on the level of security you want to achieve.</p>>
+        depending on the level of security you want to achieve.</p>
     <p>To check your portal for possible improvements in terms of headers security,
         we highly recommend the <a href="https://securityheaders.io/">securityheaders.io</a>
         website. If you want to read more about CSP and all related headers
