Minor: Fix link in security.html

--- a/public/documentation/security.html
+++ b/public/documentation/security.html
@@ -49,7 +49,7 @@ If you are using Nginx, set <i>server_tokens off;</i> and PHP's expose_php to "O
 <h2><a id="2.Keeping-up-to-date"></a>2. Keeping up to date</h2>
 <p>
 Make sure you check <a href="https://github.com/chamilo/chamilo-lms/wiki/security-issues">our security issues page</a> regularly.
-Follow our security X/Twitter feed: <a href="http://twitter.com/chamilosecurity">http://twitter.com/chamilosecurity</a>.
+Follow our security X/Twitter feed: <a href="https://x.com/chamilosecurity">http://twitter.com/chamilosecurity</a>.
 In Chamilo 2.0, we intend to send you security-related notifications through the "Chamilo News" block on the admin page. Make sure you enable it and check the page regularly.
 </p>
 
