Documentation: Update changelog in preparation for alpha 2 (minor db fixes)

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -41,7 +41,8 @@
     </p>
     <p>
         An alpha version, to us, means that (except for unforeseen issues) the database files structure are fixed
-        (although some files could still be added/removed before the beta release).
+        (although some files could still be added/removed before the beta release). The visual design is *NOT* important
+        to us in this alpha version.
     </p>
     <h3>Release name</h3>
     <p><a href="https://fr.wikipedia.org/wiki/Liste_des_camps_romains_d%27Ast%C3%A9rix_le_Gaulois#Petibonum"></a>Petibonum (ficticious village name, see French art)</p>
@@ -144,6 +145,7 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-04-03] (<a href="https://github.com/chamilo/chamilo-lms/commit/f8654a7599737d5b4247bfe4c1f043421df30021">f8654a75</a>) Internal: Hide internal settings from settings form and search results</li>
         <li>[2025-04-04] (<a href="https://github.com/chamilo/chamilo-lms/commit/bbbb0f3e048e66ea428569b2ffe42fb421c20faa">bbbb0f3e</a>) Documentation: Update security.html</li>
         <li>[2025-04-03] (<a href="https://github.com/chamilo/chamilo-lms/commit/485d687f945c19054a7a55ef0253603a13b4954c">485d687f</a>) Internal: Settings cleanup and title fixes</li>
         <li>[2025-04-03] (<a href="https://github.com/chamilo/chamilo-lms/commit/ad24f74db630253bd20a33c9bf0d9cfc60d5e3d8">ad24f74d</a>) Refactor: Simplify login redirect URL generation in ExceptionListener</li>
