Documentation: Add "Console" prefix in commit messages for bin/console commands

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -926,6 +926,7 @@
             <li>Career</li>
             <li>Chat</li>
             <li>CI (for Continuous Integration, automated tests, etc)</li>
+            <li>Console (for commands launched with php bin/console chamilo:...)</li>
             <li>Course description</li>
             <li>Course Progress</li>
             <li>Cron</li>
