Minor: Documentation: Update HTTP link to HTTPS

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -881,7 +881,7 @@
     <div>
         Each version is shortly described, with:
     <ul>
-        <li>a version number using <a href="http://semver.org/">Semantic Versioning</a></li>
+        <li>a version number using <a href="https://semver.org/">Semantic Versioning</a></li>
         <li>a version name, which is the name of a town or village visited at least once by one of our development team members, preferably with a link to the place in OpenStreetmap or on Wikipedia</li>
         <li>a release date</li>
         <li>an optional, short history explaining the relationship between the version and the place</li>
