Documentation: Add info about Mongolian language to changelog & estimated release date for 1.11.30

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -112,7 +112,7 @@
 
     <div class="version" aria-label="1.11.30">
         <a id="1.11.30"></a>
-        <h1>Chamilo 1.11.30 - ?, /02/2025</h1>
+        <h1>Chamilo 1.11.30 - Caral, 22/06/2025</h1>
         <h3>Release notes - summary</h3>
         <p>Chamilo 1.11.30 is a patch release on top of 1.11.28.</p>
         <h3>Release name</h3>
@@ -126,6 +126,7 @@
         <h4>For end-users, teachers and Chamilo admins</h4>
         These features are immediately available to users through the web interface.<br />
         <ul aria-live="off">
+          <li>Language: Mongolian language added. Requires following query to manually enable in 1.11.30: "INSERT INTO language (original_name, english_name, isocode, dokeos_folder, available) VALUES ('&#1052;&#1086;&#1085;&#1075;&#1086;&#1083; &#1093;&#1101;&#1083;','mongolian','mn','mongolian',1);"</li>
         </ul>
         <h4>For developers and sysadmins</h4>
         Although most features here will be used by teachers or Chamilo admins, they require sysadmin privileges to enable them on the server.
