Documentation: Update changelog

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -193,10 +193,13 @@
             <li>[2025-06-17] (<a href="https://github.com/chamilo/chamilo-lms/commit/493303827207a1c5fc50d8e405c735afcfb2b993">49330382</a> - <a href="https://task.beeznest.com/issues/22676">BT#22676</a>) Display: Add configuration setting 'display_menu_use_course_categories' to use course categories as top horizontal drop-down menu</li>
             <li>[2025-06-17] (<a href="https://github.com/chamilo/chamilo-lms/commit/205484522c2555251852f7dfddf48310c56724f9">20548452</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6013">GH#6013</a>) Session: Add configuration setting 'scheduled_announcements_use_base_progress' for scheduled session announcement - by progress</li>
             <li>[2025-06-18] (<a href="https://github.com/chamilo/chamilo-lms/commit/e69282cded7b999398a6ebfd769e21d9d219a4eb">e69282cd</a>) Admin: Add configuration setting 'session_import_drh_hide_old_relationships_check_box' to hide the old relationships checkbox on session import view for drh users</li>
+            <li>[2025-06-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/4fd8e7d607043030f65cf20df583780304734371">4fd8e7d6</a> - <a href="https://task.beeznest.com/issues/22725">BT#22725</a>) Ticket: Add ticket deletion feature</li>
         </ul>
         <h3>Improvements (minor features) and debug</h3>
         In reverse chronological order...
         <ul aria-live="off">
+            <li>[2025-06-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/1d47856bcae8cb8e992b577a4f7ed8dc17b9b755">1d47856b</a> - <a href="https://task.beeznest.com/issues/22725">BT#22725</a>) Language: Ticket: #add partial translation in ES, FR, EN for ticket deletion functionnality</li>
+            <li>[2025-06-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/735267ddace929bc99e58c0af424e172096a8717">735267dd</a>) Internal: Fix deprecated calls to mb_convert_encoding() to encode to HTML entities. Helps support PHP 8.3</li
             <li>[2025-06-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/735267ddace929bc99e58c0af424e172096a8717">735267dd</a>) Internal: Fix deprecated calls to mb_convert_encoding() to encode to HTML entities. Helps support PHP 8.3</li>
             <li>[2025-06-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/be94e40ff58eed62e05f369298c950fa7d1297e3">be94e40f</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/5021">GH#5021</a>) Internal: Kses: Fix issue preventing loading $kses_allowedentitynames from global scope in PHP 8+</li>
             <li>[2025-06-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/0712adb23e29a873cd87f903501dd94dc45089e2">0712adb2</a>) CI: Fix issues setting up test environment for behat</li>
